Fix headerwrap margin-top

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -171,7 +171,8 @@ a:after {
 /* Header Wrap */
 #headerwrap {
 	background: url(../img/IMG_5725.JPG) no-repeat center top;
-	margin-top: 60px;
+	/*margin-top: 60px;*/
+	margin-top: 0px;
 	padding-top:140px;
 	text-align:center;
 	background-attachment: relative;
@@ -200,7 +201,7 @@ a:after {
 	color: white;
 }
 
-/* Intnro Wrap */
+/* Intro Wrap */
 
 #intro {
 	background: #2c3e50;
